# src/users/user.model.ts
@@ -3,13 +3,18 @@ import { Schema, model, Document } from 'mongoose';
 interface IUser extends Document {
     username: string;
     email: string;
+    role: string;
     password: string;
 }
 
 const userSchema = new Schema<IUser>({
     username: { type: String, required: true },
     email: { type: String, required: true },
-    password: { type: String, required: true }
+    password: { type: String, required: true },
+    role: {
+        type: String,
+        require: true
+    }
 });
 
 const UserModel = model<IUser>('User', userSchema);
