# swagger.json
@@ -14,6 +14,9 @@
 					"email": {
 						"type": "string"
 					},
+					"role": {
+						"type": "string"
+					},
 					"password": {
 						"type": "string"
 					}
@@ -21,6 +24,23 @@
 				"required": [
 					"username",
 					"email",
+					"role",
+					"password"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
+			"UserLoginParams": {
+				"properties": {
+					"username": {
+						"type": "string"
+					},
+					"password": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"username",
 					"password"
 				],
 				"type": "object",
@@ -118,12 +138,12 @@
 				]
 			}
 		},
-		"/users": {
+		"/users/register": {
 			"post": {
-				"operationId": "CreateUser",
+				"operationId": "Register",
 				"responses": {
-					"201": {
-						"description": "Created",
+					"200": {
+						"description": "Ok",
 						"content": {
 							"application/json": {
 								"schema": {}
@@ -139,6 +159,33 @@
 						"application/json": {
 							"schema": {
 								"$ref": "#/components/schemas/UserCreationParams"
+							}
+						}
+					}
+				}
+			}
+		},
+		"/users/login": {
+			"post": {
+				"operationId": "Login",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/UserLoginParams"
 							}
 						}
 					}
